@@ -10,9 +10,11 @@ WHAT IS NEW?
       ( ) | < > # ; &.
     * Running utilities (like hspeak) didn't work on Macs where the
       OHRRPGCE hadn't been installed previously [Ralph]
-    * Delete key didn't work while typing on Macs.
+    * Delete key didn't work while typing on Macs. And after resizing
+      the window, text input stopped working. [Ralph]
     * Fix the Android virtual gamepad being hidden if you open a game,
       exit to the file-picker and then open a game again
+    * Options for changing the window size now work on Macs [Ralph]
 
   * Stuff Only Developers Will Notice
     * 64 bit builds work now.
